replace Roboto download with a system font stack, more contrast on text, fix twitter logo height

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,13 +1,13 @@
 /* Fonts */
-$body-font: Roboto;
-$title-font: Amethysta;
+$body-font: Roboto, "Segoe UI", -apple-system, BlinkMacSystemFont, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+$title-font: Tahoma, Verdana, Roboto, "Segoe UI", -apple-system, BlinkMacSystemFont, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 
 /* Backgrounds colors */
 $primary-color: #191818;
 $primary-color-light: #332B38;
 $primary-color-faded: #1918183d;
 $second-color: #6f5aa1;
-$second-color-faded: #4538647a;
+$second-color-faded: #453864a3;
 
 /* Texts colors */
 $primary-text-color: #eee;
